assets/files/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend-ingress
  namespace: demo
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: carlos.kubelabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-frontend-svc
            port:
              number: 8080
